tests/should_fail/overload_nonexistent.nv
module main

// SHOULD FAIL: using overload syntax with a type that has no overload
fn greet(name: String) -> String {
    return "Hello, " + name
}

greet@(Int)("Alice")
